RESOLVED FIXED170018
Dragging on a large image should not revert to a file icon if data interaction is enabled
https://bugs.webkit.org/show_bug.cgi?id=170018
Summary Dragging on a large image should not revert to a file icon if data interactio...
Wenson Hsieh
Reported 2017-03-23 12:43:31 PDT
Attachments
Patch (14.96 KB, patch)
2017-03-23 17:50 PDT, Wenson Hsieh
no flags
Rebase on master (15.04 KB, patch)
2017-03-23 17:57 PDT, Wenson Hsieh
thorton: review+
Wenson Hsieh
Comment 1 2017-03-23 17:50:43 PDT
Wenson Hsieh
Comment 2 2017-03-23 17:57:41 PDT
Created attachment 305254 [details] Rebase on master
Wenson Hsieh
Comment 3 2017-03-23 18:44:35 PDT
Note You need to log in before you can comment on or make changes to this bug.