Dragging on a large image should not revert to a file icon if data interaction is enabled https://bugs.webkit.org/show_bug.cgi?id=170018 <rdar://problem/31184508>

Reviewed by Tim Horton.

Source/WebCore:

If data interaction is enabled, don't fall back to showing a file icon when initiating a drag on an image element.

New API tests:  DataInteractionTests.LargeImageToTargetDiv
                DataInteractionTests.AttachmentElementItemProviders

* page/DragController.cpp:
(WebCore::DragController::doImageDrag):
(WebCore::DragController::shouldUseCachedImageForDragImage):
* page/DragController.h:

Tools:

Add new tests for data interaction. LargeImageToTargetDiv verifies the change made in this patch, while
AttachmentElementItemProviders was a test that was previously removed due to <rdar://problem/31038797>.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2Cocoa/large-red-square.png: Added.
* TestWebKitAPI/Tests/ios/DataInteractionTests.mm:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/186956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214331 268f45cc-cd09-0410-ab3c-d52691b4dbfc